# tgfs

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FindFUSE.cmake  Makefile  Makefile.in  README.md  configure  configure.ac  json2tg.c  json2tg.h  socket_tasks.c  socket_tasks.h  string_list.c  string_list.h  td.cpp  td.hpp  td_chat.cpp  td_chat.hpp  td_file_info.cpp  td_file_info.hpp  td_message.cpp  td_message.hpp  tg_data.c  tg_data.h  tgfs  tgfs.c  tgfs.cpp
lib/: README.md
src/: auth.c  auth.h  callback.c  json2tg.c  json2tg.h  socket_tasks.c  socket_tasks.h  tg.c  tg.h  tg_data.c  tg_data.h  tgfs.c
